Persist calls to HostContextFactoryPrivate::SetOutputIsSecure

Remember the last call to SetOutputIsSecure, and apply the information
when the compositor is configured, or if the gpu process crashes.

Bug: 882519
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: Id212aaae3b2c164575c1d8e92e93e623bd182d69
Reviewed-on: https://chromium-review.googlesource.com/1225290
Commit-Queue: Sean Gilhuly <sgilhuly@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: danakj <danakj@chromium.org>
Reviewed-by: kylechar <kylechar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592789}