services/ws/host_context_factory.cc
@@ -47,7 +47,7 @@ void HostContextFactory::OnEstablishedGpuChannel(
     return;
   }
   context_factory_private_->ConfigureCompositor(
-      compositor, std::move(context_provider), nullptr);
+      compositor.get(), std::move(context_provider), nullptr);
 }
 
 void HostContextFactory::CreateLayerTreeFrameSink(
